v2.x-JIRAPLUGIN-317-ROUND_REMAINING_CHECKBOX
Checkbox for displaying rounded remaining time.

--- a/src/main/resources/templates/timetracker/jttp.vm
+++ b/src/main/resources/templates/timetracker/jttp.vm
@@ -54,7 +54,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 				comment: '${comment}',
 				actionFlag: '${actionFlag}',
 				worklogSize: ${worklogs.size()},
-				isRounding : ${isRounding},
+				isRounded : ${isRounded},
 			}
 		);
 	})(everit.jttp.main, AJS.$);
