--- a/src/main/resources/templates/timetracker/settings.vm
+++ b/src/main/resources/templates/timetracker/settings.vm
@@ -109,7 +109,7 @@
         <h3>$i18n.getText("plugin.setting.worklog.data.appearance")</h3>
         <div class="field-group">
           <label>$i18n.getText("plugin.setting.rounded.remaining"):</label>
-          <input id="isRounding" type="checkbox" value="use round" class="settings-input" name="isRounding" #if($isRounding) checked #end/>
+          <input id="isRounded" type="checkbox" value="use round" class="settings-input" name="isRounded" #if($isRounded) checked #end/>
           <div class="description">$i18n.getText("plugin.setting.rounded.remaining.help")</div>
         </div>
         
