v2.x-JIRAPLUGIN-374-REMOVE_FECHA
Remove fecha parse from jttp

--- a/src/main/resources/templates/timetracker/jttp.vm
+++ b/src/main/resources/templates/timetracker/jttp.vm
@@ -55,6 +55,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
 				actionFlag: '${actionFlag}',
 				worklogSize: ${worklogs.size()},
 				isRounded : ${isRounded},
+				dateFormat: '${dateFormat}',
 			}
 		);
 	})(everit.jttp.main, AJS.$);
