--- a/src/main/resources/templates/timetracker/summary.vm
+++ b/src/main/resources/templates/timetracker/summary.vm
@@ -14,27 +14,63 @@
  * limitations under the License.
  *#
          <div class="summary-container">
-           <div class="aui-group aui-group-trio">
-             <div class="aui-item">
-               <label class="progress-label" for="day-progress">Day: 4h 10m / 5h 10m</label>
-               <div id="day-progress" class="progress" style="height:8px; margin-bottom:0px;">
-                 <div class="progress-bar progress-bar-danger" style="width: 50%"></div>
-                 <div class="progress-bar progress-bar-danger-nowork" style="width: 30%"></div>
+            <div id="progressBars" class="aui-group aui-group-trio">
+               #if($issueRegexIsNotEmpty)
+				<div class="aui-item jttpTooltip">
+					<label class="progress-label" for="day-progress">Day: $dayFilteredSummary / $daySummary</label>
+					<div id="day-progress" class="progress" style="height:8px; margin-bottom:0px;">
+						<div class="progress-bar" style="width: ${dayFilteredRealWorkIndicatorPrecent}%">                                        
+						</div>
+						<div class="progress-bar progress-bar-nowork" style="width: ${dayFilteredNonWorkIndicatorPrecent}%">                                        
+						</div>
+					</div>
+						<div class="jttpTooltiptext">$i18n.getText('plugin.progress.expected'): $formattedExpectedWorkTimeInDay <br/> $i18n.getText('plugin.progress.total'): $daySummary <br/>$i18n.getText('plugin.progress.realWork'): $dayFilteredSummary <br/>$i18n.getText('plugin.progress.nonWork'): $formattedNonWorkTimeInDay</div>
+				</div>
+				<div class="aui-item jttpTooltip">
+					<label class="progress-label" for="week-progress">Week: $weekFilteredSummary / $weekSummary</label>
+					<div id="week-progress" class="progress" style="height:8px; margin-bottom:0px;">
+						<div class="progress-bar" style="width: ${weekFilteredRealWorkIndicatorPrecent}%">                                        
+						</div>
+						<div class="progress-bar progress-bar-nowork" style="width: ${weekFilteredNonWorkIndicatorPrecent}%">                                        
+						</div>
+					</div>
+						<div class="jttpTooltiptext">$i18n.getText('plugin.progress.expected'): $formattedExpectedWorkTimeInWeek <br/> $i18n.getText('plugin.progress.total'): $weekSummary <br/>$i18n.getText('plugin.progress.realWork'):$weekFilteredSummary <br/>$i18n.getText('plugin.progress.nonWork'): $formattedNonWorkTimeInWeek</div>
+				</div>
+				<div class="aui-item jttpTooltip">
+					<label class="progress-label" for="month-progress">Month: $monthFilteredSummary / $monthSummary</label>
+					<div id="month-progress" class="progress" style="height:8px; margin-bottom:0px;">
+						<div class="progress-bar" style="width: ${monthFilteredRealWorkIndicatorPrecent}%">                                        
+						</div>
+						<div class="progress-bar progress-bar-nowork" style="width: ${monthFilteredNonWorkIndicatorPrecent}%">                                        
+						</div>
+					</div>
+						<div class="jttpTooltiptext">$i18n.getText('plugin.progress.expected'): $formattedExpectedWorkTimeInMonth<br/> $i18n.getText('plugin.progress.total'): $monthSummary <br/>$i18n.getText('plugin.progress.realWork'): $monthFilteredSummary <br/>$i18n.getText('plugin.progress.nonWork'): $formattedNonWorkTimeInMonth</div>
+				</div>
+				#else
+				<div class="aui-item jttpTooltip">
+					<label class="progress-label" for="day-progress">Day: $daySummary</label>
+					<div id="day-progress" class="progress" style="height:8px; margin-bottom:0px;">
+						<div class="progress-bar" style="width: ${dayIndicatorPrecent}%">                                        
+						</div>
+					</div>
+					<div class="jttpTooltiptext">$i18n.getText('plugin.progress.expected'): $formattedExpectedWorkTimeInDay<br/> $i18n.getText('plugin.progress.total'): $daySummary</div>
+				</div>
+				<div class="aui-item jttpTooltip">
+					<label class="progress-label" for="week-progress">Week: $weekSummary</label>
+					<div id="week-progress" class="progress" style="height:8px; margin-bottom:0px;">
+						<div class="progress-bar" style="width: ${weekIndicatorPrecent}%">                                        
+						</div>
+					</div>
+					<div class="jttpTooltiptext">$i18n.getText('plugin.progress.expected'): $formattedExpectedWorkTimeInWeek<br/> $i18n.getText('plugin.progress.total'): $weekSummary</div>
+				</div>
+				<div class="aui-item jttpTooltip">
+					<label class="progress-label" for="month-progress">Month: $monthSummary</label>
+					<div id="month-progress" class="progress" style="height:8px; margin-bottom:0px;">
+						<div class="progress-bar" style="width: ${monthIndicatorPrecent}%">                                        
+						</div>
+					</div>
+					<div class="jttpTooltiptext">$i18n.getText('plugin.progress.expected'): $formattedExpectedWorkTimeInMonth<br/> $i18n.getText('plugin.progress.total'): $monthSummary</div>
+				</div>
+				#end
                </div>
-             </div>
-             <div class="aui-item">
-               <label class="progress-label" for="day-progress">Week: 2d 1h 30m / 2d 2h 30m</label>
-               <div id="week-progress" class="progress" style="height:8px; margin-bottom:0px;">
-                 <div class="progress-bar progress-bar-warning" style="width: 30%"></div>
-                 <div class="progress-bar progress-bar-warning-nowork" style="width: 30%"></div>
-               </div>
-             </div>
-             <div class="aui-item">
-               <label class="progress-label" for="day-progress">Month: 3w 4h / 3w 5h</label>
-               <div id="month-progress" class="progress" style="height:8px; margin-bottom:0px;">
-                 <div class="progress-bar progress-bar-success" style="width: 70%"></div>
-                 <div class="progress-bar progress-bar-success-nowork" style="width: 15%"></div>
-                </div>
-              </div>
-            </div>
           </div>
