v2.x-JIRAPLUGIN-348-FECHA_REMOVE
Fecha date handler remove from reporting.

--- a/src/main/resources/templates/reporting/reporting.vm
+++ b/src/main/resources/templates/reporting/reporting.vm
@@ -68,6 +68,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:reportin
             notBrowsableProjectKeys: [ #foreach( $tmp in $notBrowsableProjectKeys )#if($velocityCount> 1),#end "$tmp" #end ],
             selectedFilter: $filterCondition.filter,
             searcherValue: "$filterCondition.searcherValue",
+            dateFormat: "${dateFormat}"
           }
         );
       })(everit.reporting.main, AJS.$);
