--- a/src/main/resources/templates/reporting/chart_report.vm
+++ b/src/main/resources/templates/reporting/chart_report.vm
@@ -48,7 +48,8 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:chart_re
 				useISO8601 : ${currentCalendar.useISO8601},
 				hasBrowseUsersPermission: ${hasBrowseUsersPermission},
 				dateFromFormated : ${dateFromFormated},
-				dateToFormated : ${dateToFormated}
+				dateToFormated : ${dateToFormated},
+				dateFormat: "${dateFormat}"
 			}
 		);
 	})(everit.jttp.report_common_scripts, AJS.$);
