Ongoing development of epic link in work log details report.

--- a/src/main/resources/templates/reporting/reporting_result_worklog_details.vm
+++ b/src/main/resources/templates/reporting/reporting_result_worklog_details.vm
@@ -51,6 +51,7 @@
 	                                          <option value="jtrp_col_timeSpent">$i18n.getText("jtrp.report.wd.col.jtrp_col_timeSpent.select")</option>
 	                                          <option value="jtrp_col_worklogCreated">$i18n.getText("jtrp.report.wd.col.jtrp_col_worklogCreated")</option>
 	                                          <option value="jtrp_col_worklogUpdated">$i18n.getText("jtrp.report.wd.col.jtrp_col_worklogUpdated")</option>
+	                                          <option value="jtrp_col_issueEpicLink">$i18n.getText("jtrp.report.wd.col.jtrp_col_issueEpicLink")</option>
 	                                        </select>
 	                                      </div>
 	                                    </div>
