v2.x-JIRAPLUGIN-371-TIMETRACKER_INDICATOR
Event for tracking the use of the progress indicator.

--- a/src/main/resources/templates/timetracker/settings.vm
+++ b/src/main/resources/templates/timetracker/settings.vm
@@ -126,5 +126,8 @@
   
   <!-- Issue Collector script -->
   <script type="text/javascript" src="$issueCollectorSrc"></script>
+  #if($analyticsDTO.analyticsCheck)
+    #parse("templates/common/analytics.vm")
+  #end
 </body>
 </html>
