--- a/src/main/resources/templates/timetracker/jttp.vm
+++ b/src/main/resources/templates/timetracker/jttp.vm
@@ -116,7 +116,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
           </div>
         </form>
 
-        <h4 name="add_worklog" class="sidebar-header"><span>$i18n.getText('plugin.header.add.worklog')</span></h4>
+        <h4 id="add_worklog" name="add_worklog" class="sidebar-header"><span>$i18n.getText('plugin.header.add.worklog')</span></h4>
 
         <form name="dummyForm" class="aui top-label" id="dummyForm" method="get" onsubmit="return false;" >
           <div class="aui-group aui-group-split bottom-module">
@@ -211,7 +211,7 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:jttp-res
                     <input type="hidden" id="date" name="date" >
                     <input type="hidden" id="editAll" name="editAll" value="$editAllIds" >
                     <input type="hidden" id="worklogValuesJson" name="worklogValuesJson" >
-                    <input class="aui-button aui-button-light" type="reset" value="Cancel"
+                    <input class="aui-button" type="reset" value="Cancel"
                       id="jttp-logwork-cancel" name="lw_cancel" onclick="everit.jttp.main.cancelClick();">
                   </div>
                 </form>
