Start implementing CSV export.

--- a/src/main/resources/templates/reporting/reporting_result_worklog_details.vm
+++ b/src/main/resources/templates/reporting/reporting_result_worklog_details.vm
@@ -75,6 +75,9 @@
 	                                          <li class="aui-list-item">
 	                                            <a id="detials-custom-export" class="aui-list-item-link" target="_blank" href="#" data-jttp-href="$contextPath/rest/jttp-rest/1/download-report/downloadWorklogDetailsReport" onclick="return everit.reporting.main.updateDetailsCustomExportHref()">$i18n.getText("jtrp.report.btn.export.current")</a>
 	                                          </li>
+	                                           <li class="aui-list-item">
+	                                            <a id="detials-custom-export" class="aui-list-item-link" target="_blank" href="#" data-jttp-href="$contextPath/rest/jttp-rest/1/download-report/downloadWorklogDetailsReportAsCSV" onclick="return everit.reporting.main.updateDetailsCustomExportHref()">$i18n.getText("jtrp.report.btn.export.csv.current")</a>
+	                                          </li>
 	                                        </ul>
 	                                      </div>
 	                                    </div>
