Ongoing development of csv exporter.

--- a/src/main/resources/templates/reporting/reporting.vm
+++ b/src/main/resources/templates/reporting/reporting.vm
@@ -547,5 +547,6 @@ $webResourceManager.requireResource("org.everit.jira.timetracker.plugin:reportin
     #if($analyticsDTO.analyticsCheck)
       #parse("templates/common/analytics.vm")
     #end
+    <iframe name="hiddenFrameForDownload" style="display:none"></iframe>          
   </body>
 </html>
