--- a/src/main/resources/templates/reporting/reporting_result_summaries.vm
+++ b/src/main/resources/templates/reporting/reporting_result_summaries.vm
@@ -19,12 +19,26 @@
                     </div>
                     <div class="mod-content">
                         <div class="summary-export-container action-button-container">
-                            <div class="jtrp-export">
-                                <a id="summaries-export" class="criteria-selector aui-button aui-button-subtle" target="_blank" href="#" data-jttp-href="$contextPath/rest/jttp-rest/1/download-report/downloadSummariesReport" onclick="return everit.reporting.main.updateSummariesExportHref()">
-	                                <span class="aui-icon aui-icon-small aui-iconfont-export"></span>
-	                                <span class="button-label">$i18n.getText("jtrp.report.btn.export")</span>
-	                            </a>
-	                        </div>
+                        <div id="worklogDetailsExportDropDown" class="aui-style-default aui-dropdown2">
+	                              <div class="jttr-filter-field">
+	                                <div class='ajs-layer box-shadow'>
+	                                  <div data-query>
+	                                    <div class='form-body checkboxmultiselect-container'>
+	                                      <div class='field-group aui-field-issuetype'>
+	                                        <ul class="aui-list-section">
+	                                          <li class="aui-list-item">
+	                                            <a id="summaries-export" class="aui-list-item-link" target="hiddenFrameForDownload" href="#" data-jttp-href="$contextPath/rest/jttp-rest/1/download-report/downloadSummariesReport" onclick="return everit.reporting.main.updateSummariesExportHref(this)">$i18n.getText("jtrp.report.btn.export")</a>
+	                                          </li>
+	                                          <li class="aui-list-item">
+	                                            <a id="detials-custom-export" class="aui-list-item-link" target="hiddenFrameForDownload" href="#" data-jttp-href="$contextPath/rest/jttp-rest/1/download-report/downloadSummariesReportAsCSV" onclick="return everit.reporting.main.updateSummariesExportHref(this)">$i18n.getText("jtrp.report.btn.export.excel.current")</a>
+	                                          </li>
+	                                        </ul>
+	                                      </div>
+	                                    </div>
+	                                  </div>
+	                                </div>
+	                              </div>
+	                            </div>
                         </div>
                         <div class="aui-tabs horizontal-tabs" data-aui-responsive>
                             #set($isTabsProjectActive = $selectedActiveTab == "tabs-project")
